# Pistachio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
docs/: dox.in
resources/: components.json
resources/config/: player.json  slime.json
resources/shaders/: fragment.glsl  shader.glsl  sprite_shader.glsl  test_shader.glsl  vertex.glsl
src/Pistachio/: common.h  main.cpp
src/Pistachio/application/: application.cpp  application.h
src/Pistachio/concrete/: component.cpp  component.h  system.cpp  system.h
src/Pistachio/core/: SDLHandler.cpp  SDLHandler.h  common.h  component.cpp  component.h  pool.h  quadArray.cpp  quadArray.h  registry.cpp  registry.h  sprite.h  spriteBatch.cpp  spriteBatch.h  system.cpp  system.h
src/Pistachio/core/ecs/: component.cpp  component.h  pool.h  registry.h  system.cpp  system.h  systemManager.h
src/Pistachio/core/ecs/system/: system.cpp  system.h  systemManager.h
src/Pistachio/core/model/: model.h  modelManager.h
src/Pistachio/core/resourceManager/: resourceManager.cpp  resourceManager.h  shader.cpp  shader.h  texture.cpp  texture.h
src/Pistachio/core/resources/: resourceManager.cpp  resourceManager.h  shader.cpp  shader.h  texture.cpp  texture.h
src/Pistachio/frontend/: application.cpp  application.h  image.h  shader.h
src/Pistachio/misc/: glfwKey.h
src/test/: test.cpp
